--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,7 +1,4 @@
-﻿@font-face{
-    src:url(assets/fonts/Roboto-Regular.ttf);
-    font-family:"Roboto";
-}
+﻿
 :root {
     --Tomato: hsl(4, 100%, 67%);
     --DarkSlateGrey: hsl(234, 29%, 20%);
@@ -12,31 +9,34 @@
 *{
     box-sizing:border-box;
 }
+.roboto-thin {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+}
 
-body {
-    font-family: "Roboto",sans serif;
-    line-height:1.5rem;
+.roboto-regular {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.roboto-bold {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+body{
+    font-family:"Roboto",sans-serif;
     display:flex;
     flex-direction:column;
-    align-items:center;
-    justify-content:center;
+    
+    
     
 }
-.card{
-    display:flex;
-    flex-direction:column;
-    padding:0rem 1.5rem;
-    
-}
-picture{
-    max-width:100%;
-}
-.container_1 {
-    display: flex;
-    flex-direction: column;
-    place-self: center;
-    padding: 1.5rem;
-}
+
+
 .container_2 {
     display: flex;
     flex-direction: column;
@@ -48,116 +48,106 @@ picture{
     border-radius: 1rem;
 }
 
-
-
-
+.content{
+    padding:1.5rem;
+}
 h1{
-    font-weight:700;
+    font-size:2.5rem;
     color:var(--DarkSlateGrey);
-    font-size:2rem;
-}
-p{
-    color:var(--CharcoalGrey);
-    font-size:1rem;
+    font-weight:700;
     padding:1rem 0;
-}
-ul {
-    list-style-image: url(assets/images/icon-list.svg);
-    color: var(--CharcoalGrey);
-    font-family: "Roboto",sans serif;
-}
-li {
-    margin-left: 2rem;
-    color: var(--CharcoalGrey);
-    font-family: "Roboto",sans serif;
     
 }
-form{
-    margin-top:1rem;
+
+
+p {
+    padding:0.5rem 0;
+    color: var(--CharcoalGrey);
+    font-weight: 400;
+    line-height: 1.5rem;
+   
 }
-.label {
-    color: var(--DarkSlateGrey);
-    font-family: "Roboto",sans serif;
-    font-size:0.8rem;
+
+ul {
+    list-style-image: url(assets/images/icon-list.svg);
+    padding: 1rem 2rem;
+    color: var(--CharcoalGrey);
+    line-height: 1.5rem;
+}
+form {
+    margin-top:1.5rem;
+    max-width: 100%;
+}
+label{
+    font-size:0.75rem;
     font-weight:700;
+    color:var(--DarkSlateGrey);
 }
 input {
     width: 100%;
-    font-family: "Roboto",sans serif;
-    padding: 0.5rem;
-    margin: 0.5rem 0;
-    border-radius: 0.5rem;
-    border-color: var(--Grey);
-    border-width: 0.5px;
+    padding: 1rem;
+    border-radius:0.5rem;
+    font-family: inherit;
+    border: 1px solid var(--Grey);
+    font-size:0.8rem;
 }
-.button {
-    color: var(--White);
-    background-color: var(--DarkSlateGrey);
-    font-family: "Roboto",sans serif;
+
+.button{
+    background-color:var(--DarkSlateGrey);
+    color:white;
     font-weight:700;
+    margin:1rem 0;
+    
 }
-.error {
-    color: var(--Tomato);
-    font-family: "Roboto",sans serif;
-    font-size: 0.8rem;
+#email{
+    padding: 0.8rem;
+    color:var(--Grey);
+}
+
+#submitedEmail {
+    color: var(--DarkSlateGrey);
     font-weight: 700;
+}
+
+.error_msg {
+    
+    color: var(--Tomato);
+    font-weight: 700;
+    font-size: 0.75rem;
     text-align:right;
-}
-strong{
-    font-weight:700;
-}
-.content {
-    margin: 2rem;
-    background-color: var(--White);
-    border-radius: 1.5rem;
+    
+    
+
 }
 
-.hidden{
-    display:none;
-}
-
-.button:hover {
-    background-color: var(--Tomato);
-    background: linear-gradient(to right, #ff5378, var(--Tomato));
-    box-shadow: var(--Tomato) -4px 9px 25px -6px;
+.hidden {
+    display: none;
 }
 
 
-
-.error_style {
-    background-color: hsl(var(--Tomato) / 0.4);
-    box-shadow: 0 0 0 2px hsl(var(--Tomato));
-    color: hsl(var(--Tomato));
-    color: var(--Tomato);
-    font-family: "Roboto",sans serif;
-    font-size: 0.8rem;
-    font-weight: 700;
-    text-align: right;
-}
-
-
-@media (min-width:650px){
+@media (min-width:650px) {
+    body {
+        background-color: var(--CharcoalGrey);
+        min-height: 100vh;
+    }
     .container_1 {
+        display: flex;
         flex-direction: row-reverse;
         background-color: var(--White);
-        border-radius:1rem;
+        border-radius: 1rem;
+        margin: 15%;
+        padding:2rem;
+        
     }
 
 
-
-    body{
-        background-color:var(--CharcoalGrey);
-        min-height:100vh;
-    }
+    
 
     .content {
-        margin: 2rem;
+        
         background-color: var(--White);
         border-radius: 1.5rem;
+        justify-content:center;
+        justify-items:center;
     }
-    
-    
 }
-
-
-
